[package]
name = "connected_agents"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.47", features = ["derive"] }
# chrono = { version = "0.4.41", features = ["serde"] }
petgraph = "0.8.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
